--- a/src/OCVimgPose.ipynb
+++ b/src/OCVimgPose.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "(1214, 880, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2d314d490>"
+       "<matplotlib.image.AxesImage at 0x29db151d0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-17 12:14:32.096 Python[70022:2628302] WARNING: Secure coding is not enabled for restorable state! Enable secure coding by implementing NSApplicationDelegate.applicationSupportsSecureRestorableState: and returning YES.\n"
+      "2023-11-18 01:40:04.285 Python[74405:3103077] WARNING: Secure coding is not enabled for restorable state! Enable secure coding by implementing NSApplicationDelegate.applicationSupportsSecureRestorableState: and returning YES.\n"
      ]
     }
    ],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,6 +388,196 @@
     "    pass\n",
     "\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Altura em pixels: 963\n"
+     ]
+    }
+   ],
+   "source": [
+    "topo_cabeca = (int(landmarks[mp_pose.PoseLandmark.RIGHT_EYE_INNER].x * image.shape[1]),\n",
+    "               int(landmarks[mp_pose.PoseLandmark.RIGHT_EYE_INNER].y * image.shape[0]))\n",
+    "\n",
+    "base = (int(landmarks[mp_pose.PoseLandmark.RIGHT_HEEL].x * image.shape[1]),\n",
+    "        int(landmarks[mp_pose.PoseLandmark.RIGHT_HEEL].y * image.shape[0]))\n",
+    "\n",
+    "# Mede a distância vertical em pixels\n",
+    "altura_pixels_na_imagem = abs(topo_cabeca[1] - base[1])\n",
+    "\n",
+    "# Imprime a altura em pixels\n",
+    "print(\"Altura em pixels:\", altura_pixels_na_imagem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Densidade de Pixels por Centímetro (Horizontal): 56.68999999999999\n",
+      "Densidade de Pixels por Centímetro (Vertical): 56.68999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Shape da imagem\n",
+    "largura_pixels, altura_pixels, canais = 1214, 880, 3\n",
+    "\n",
+    "# Resolução em DPI\n",
+    "dpi = 143.99259999999998\n",
+    "\n",
+    "# Fator de conversão de polegadas para centímetros\n",
+    "polegadas_para_cm = 2.54   \n",
+    "\n",
+    "# Calcula a densidade de pixels por centímetro nas direções horizontal e vertical\n",
+    "densidade_pixels_cm_horizontal = dpi / polegadas_para_cm\n",
+    "densidade_pixels_cm_vertical = dpi / polegadas_para_cm\n",
+    "\n",
+    "# Imprime as densidades de pixels por centímetro\n",
+    "print(\"Densidade de Pixels por Centímetro (Horizontal):\", densidade_pixels_cm_horizontal)\n",
+    "print(\"Densidade de Pixels por Centímetro (Vertical):\", densidade_pixels_cm_vertical)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Altura em Centímetros: 16.986250000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "altura_pixels = 963\n",
+    "densidade_pixels_cm_vertical = 56.69291338582677\n",
+    "\n",
+    "altura_cm = altura_pixels / densidade_pixels_cm_vertical\n",
+    "\n",
+    "print(\"Altura em Centímetros:\", altura_cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resolução DPI (horizontal): 143.99259999999998, Resolução DPI (vertical): 143.99259999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "\n",
+    "# Carregar a imagem\n",
+    "img1 = Image.open('/Users/gabriel/TCC/imgBody.png')\n",
+    "\n",
+    "# Obtém informações dos metadados\n",
+    "info_metadados = img1.info\n",
+    "\n",
+    "# Verifica se há informações sobre a resolução DPI\n",
+    "if 'dpi' in info_metadados:\n",
+    "    dpi_x, dpi_y = info_metadados['dpi']\n",
+    "    print(f\"Resolução DPI (horizontal): {dpi_x}, Resolução DPI (vertical): {dpi_y}\")\n",
+    "else:\n",
+    "    print(\"As informações sobre a resolução DPI não estão disponíveis.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distância entre os landmarks em pixels: 364.1785276481852\n"
+     ]
+    }
+   ],
+   "source": [
+    "mp_pose = mp.solutions.pose\n",
+    "pose = mp_pose.Pose()\n",
+    "\n",
+    "# Carregue a imagem\n",
+    "image = cv2.imread('/Users/gabriel/TCC/imgBody.png')\n",
+    "image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "# Execute a detecção de pose na imagem\n",
+    "results = pose.process(image_rgb)\n",
+    "\n",
+    "# Especifique os índices dos landmarks que você deseja medir\n",
+    "landmark_index1 = mp_pose.PoseLandmark.RIGHT_SHOULDER.value\n",
+    "landmark_index2 = mp_pose.PoseLandmark.RIGHT_INDEX.value\n",
+    "\n",
+    "# Obtenha as coordenadas x e y dos landmarks\n",
+    "x1, y1 = int(results.pose_landmarks.landmark[landmark_index1].x * image.shape[1]), int(results.pose_landmarks.landmark[landmark_index1].y * image.shape[0])\n",
+    "x2, y2 = int(results.pose_landmarks.landmark[landmark_index2].x * image.shape[1]), int(results.pose_landmarks.landmark[landmark_index2].y * image.shape[0])\n",
+    "\n",
+    "# Calcule a distância em pixels\n",
+    "distance_pixel_rightArm = math.sqrt((x2 - x1)**2 + (y2 - y1)**2)\n",
+    "\n",
+    "print(\"Distância entre os landmarks em pixels:\", distance_pixel_rightArm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Centímetros por pixel: 0.17653167185877466\n"
+     ]
+    }
+   ],
+   "source": [
+    "altura_real_cm = 170\n",
+    "altura_pixels = 963\n",
+    "\n",
+    "centimetros_por_pixel = altura_real_cm / altura_pixels\n",
+    "\n",
+    "print(\"Centímetros por pixel:\", centimetros_por_pixel)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Medida do braço direito em centímetros: 64.28904434080113\n"
+     ]
+    }
+   ],
+   "source": [
+    "medida_rightArm_cm = distance_pixel_rightArm * centimetros_por_pixel\n",
+    "print(\"Medida do braço direito em centímetros:\", medida_rightArm_cm)"
    ]
   },
   {
